# eink_nfc_img

./: .gitignore  CLAUDE.md  Cargo.toml  PROTOCOL.md  README.md  logo.icon  rust-toolchain.toml
.cargo/: config.toml
research_docs/: .gitignore  CLAUDE.md  DMPL0154FN1_research.md  PROTOCOL_IsoDep_BWRY.md  PROTOCOL_IsoDep_GenB.md  PROTOCOL_Password.md  RESEARCH_SUMMARY.md
scripts/: convert_to_4ei.py  convert_to_bmp.py
specs/: GENB_PROTOCOL_IMPLEMENTATION.md
src/: image.rs  main.rs  protocol.rs  protocol_bwry.rs  protocol_common.rs  protocol_genb.rs  tag_type.rs
