# Flipper Zero DMPL0154FN1 4-Color E-Ink NFC Writer

cargo-features = ["different-binary-name"]

[package]
name = "eink_nfc_img"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
publish = false

autobins = false
autoexamples = false
autotests = false
autobenches = false

[[bin]]
name = "eink_nfc_img"
filename = "eink_nfc_img.fap"
bench = false
test = false

[dependencies]
# Formatting for no_std
ufmt = "0.2"

# Flipper Zero SDK crates (v0.16.0)
flipperzero = { version = "0.16.0", features = ["alloc"] }
flipperzero-sys = { version = "0.16.0" }
flipperzero-rt = { version = "0.16.0" }
flipperzero-alloc = { version = "0.16.0" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
